manifests/01_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  namespace: k8s-demystified
  labels:
    app: my-app
spec:
  containers:
    - name: my-container
      image: ghcr.io/stefanprodan/podinfo:6.6.1
      resources:
        requests:
          cpu: 100m
          memory: 64Mi
        limits:
          memory: 256Mi
      ports:
        - name: http
          containerPort: 9898
          protocol: TCP
      command:
        - ./podinfo
        - --level=debug
