manifests/08_deployment-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  namespace: k8s-demystified
  labels:
    app: my-app
spec:
  selector:
    matchLabels:
      app: my-app
  replicas: 5
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-container
          image: ghcr.io/stefanprodan/podinfo:6.6.1
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              memory: 256Mi
          ports:
            - name: http
              containerPort: 9898
              protocol: TCP
          command:
            - ./podinfo
            - --level=debug
            - --config-path=/config
          volumeMounts:
            - name: config
              mountPath: "/config/"
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: my-config
            items:
              - key: "config.yaml"
                path: "config.yaml"
