manifests/04_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: k8s-demystified
spec:
  selector:
    app: my-app
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9898
